--- a/package.json
+++ b/package.json
@@ -4,20 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint index.js"
   },
   "keywords": [],
   "author": "Echo Idenden <idendennbte@gmail.com> (https://github.com/ecidstudent)",
   "license": "MIT",
-
-  
-
-
-
-"bin": {
-
-  "Echo": "index.js"
-  
+  "bin": {
+    "Echo": "index.js"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.20.0",
+    "eslint": "^9.20.0",
+    "globals": "^15.14.0"
   }
-  
-}  
+}
